--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "zone.js": "0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.8",
-    "@angular/cli": "~13.3.8",
-    "@angular/compiler-cli": "~14.0.4",
+    "@angular-devkit/build-angular": "^14.0.5",
+    "@angular/cli": "^14.0.5",
+    "@angular/compiler-cli": "^14.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
