--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-builders/jest": "13.0.3",
+    "@angular-devkit/core": "~13.1.4",
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
